# otel-examples

./: README.md  collector-config.yaml  docker-compose.yaml
services/: docker-compose.yaml  push.sh
services/invoice/: Dockerfile  index.js  invoice-template.html  package-lock.json  package.json
services/notification/: Dockerfile  go.mod  invoice-A01  main.go  publish.sh
services/order/: Dockerfile  client.sh  conf.py  config.env  consumer.py  requirements.txt  server.py
services/order/adaptors/models/: __init__.py  orders.py
services/order/adaptors/mutators/: orders.py
services/order/adaptors/selectors/: orders.py
services/order/adaptors/tests/: test_order_mutator.py  test_order_selector.py
services/order/api/: state.py
services/order/api/handlers/: orders.py
services/order/migrations/: env.py
services/order/utils/: db.py
services/orders/: alembic.ini  conf.py  config.env  consumer.py  requirements.txt  server.py
services/orders/adaptors/models/: orders.py
services/orders/adaptors/mutators/: orders.py
services/orders/adaptors/selectors/: orders.py
services/orders/adaptors/tests/: test_order_mutator.py  test_order_selector.py
services/orders/api/: state.py
services/orders/api/handlers/: orders.py
services/orders/migrations/: env.py
services/orders/migrations/versions/: 99a170c26d28_initial.py
services/orders/utils/: db.py
services/payment/: Cargo.toml  Dockerfile
services/payment/src/: data.rs  helpers.rs  main.rs  pay.rs  state.rs
