[package]
name = "payment"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.37.0"
axum = "0.7.7"
axum-tracing-opentelemetry = "0.21.1"
opentelemetry = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["default", "tracing"] }
opentelemetry-stdout = { version = "0.26.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = "0.3.18"
